# swarm

./: .gitignore  Cargo.toml  README.md
data/: README.md
data/etc/swarm/: drone.cfg.toml
src/: drone.rs  host.rs  job.rs  lib.rs  log.rs  main.rs  models.rs
src/db/: mod.rs  sql.rs
