[package]
name = "swarm"
version = "0.1.0"
authors = ["whit <wfackler@gmail.com>"]
default-run = "swarm"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.9.1"
rusqlite = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.7"
uuid = { version = "0.8", features = ["serde", "v4"] }

