[package]
name = "swarm"
version = "0.1.1"
authors = ["whit <wfackler@gmail.com>"]
default-run = "swarm"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fallible-iterator = "0.2"
procfs = "0.9"
rusqlite = "0.23"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }

